--- a/src/common.blocks/card.scss
+++ b/src/common.blocks/card.scss
@@ -1,86 +1,122 @@
-@use "variables" as *;
-@use "mixins";
+@use 'variables' as *;
+@use 'mixins';
 
 .card {
-  @include mixins.flex(column);
-  border: 0;
-  border-radius: $defaultBorderRadius;
-  background-color: $primary;
-  color: white;
-  padding: $defaultPadding;
+	border: 0;
+	border-radius: $defaultBorderRadius;
+	padding: $defaultPadding;
+	color: white;
+	background-color: $primary;
+	@include mixins.flex(column);
 
-  &_full {
-    flex-direction: row;
-    background-color: transparent;
+	&_full {
+		flex-direction: row;
+		background-color: transparent;
 
-    .card__title {
-      flex-grow: 0;
-    }
-  }
+		.card__title {
+			flex-grow: 0;
+		}
+	}
 
-  &_compact {
-    flex-direction: row;
-    background-color: transparent;
-    align-items: center;
-    border-radius: 0;
+	&_compact {
+		flex-direction: row;
+		align-items: center;
+		border-radius: 0;
+		background-color: transparent;
 
-    .card__title {
-      flex-grow: 1;
-    }
-  }
+		.card__title {
+			flex-grow: 1;
+		}
+	}
 
-  &__column {
-    @include mixins.flex(column);
-    align-items: flex-start;
-  }
+	&__column {
+		align-items: flex-start;
+		@include mixins.flex(column);
+	}
 
-  &__row {
-    @include mixins.flex(row);
-    align-items: center;
-    gap: $defaultPadding;
-  }
+	&__row {
+		align-items: center;
+		gap: $defaultPadding;
+		@include mixins.flex(row);
+	}
 
-  &__image {
-    height: 390px;
-    aspect-ratio: 1;
-    margin: 3.75rem;
-  }
-  &__title {
-    font-size: $titleFontSize;
-    font-weight: 500;
-    margin: 0;
-    flex-grow: 1;
-  }
-  &__text {
-    text-align: left;
-    flex-grow: 1;
-  }
-  &__category {
-    padding: 0.5rem 1.25rem;
-    border-radius: 2.5rem;
-    margin-bottom: 12px;
-    color: $primary;
+	&__image {
+		height: 390px;
+		margin: 3.75rem;
+		aspect-ratio: 1;
+	}
 
-    &_soft {
-      background-color: $category1;
-    }
-    &_hard {
-      background-color: $category5;
-    }
-    &_other {
-      background-color: $category2;
-    }
-    &_additional {
-      background-color: $category3;
-    }
-    &_button {
-      background-color: $category4;
-    }
-  }
-  &__action {
+	&__title {
+		flex-grow: 1;
+		margin: 0;
+		font-weight: 500;
+		font-size: $titleFontSize;
+	}
 
-  }
-  &__price {
+	&__text {
+		flex-grow: 1;
+		text-align: left;
+	}
 
-  }
+	&__category {
+		margin-bottom: 12px;
+		border-radius: 2.5rem;
+		padding: 0.5rem 1.25rem;
+		color: $primary;
+
+		&_soft {
+			background-color: $category1;
+		}
+
+		&_hard {
+			background-color: $category5;
+		}
+
+		&_other {
+			background-color: $category2;
+		}
+
+		&_additional {
+			background-color: $category3;
+		}
+
+		&_button {
+			background-color: $category4;
+		}
+	}
+
+	&__action {
+	}
+
+	&__price {
+	}
+}
+
+.preview {
+	&__category {
+		margin-bottom: 12px;
+		border-radius: 2.5rem;
+		padding: 0.5rem 1.25rem;
+		color: $primary;
+
+		&_soft {
+			background-color: $category1;
+		}
+
+		&_hard {
+			background-color: $category5;
+		}
+
+		&_other {
+			background-color: $category2;
+		}
+
+		&_additional {
+			background-color: $category3;
+		}
+
+		&_button {
+			background-color: $category4;
+		}
+	}
 }
